--- a/eco.html
+++ b/eco.html
@@ -122,13 +122,15 @@
 
 <body>
 
-    <!-- ナビバー -->
-    <nav class="navbar navbar-expand-lg sticky-top">
+     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
             </a>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
@@ -137,6 +139,10 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                    <i class="bi bi-person-circle"></i> ログイン
+                </a>
             </div>
         </div>
     </nav>
