--- a/woodhanger.html
+++ b/woodhanger.html
@@ -102,9 +102,9 @@
         }
 
         footer {
-            background-color: #5d5353;
-            color: white;
-            padding: 60px 0 30px;
+            background-color: #8e7f7f;
+            color: #d8e1f1;
+            padding: 40px 0;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
         }
@@ -131,7 +131,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -140,15 +140,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー種類</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <button class="btn btn-outline-success ms-3 rounded-pill fw-bold">
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
-                </button>
+                </a>
             </div>
         </div>
     </nav>
