--- a/newlogin.html
+++ b/newlogin.html
@@ -4,67 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ハンガーtimes - ログイン</title>
+    <title>ハンガーtimes - 新規登録</title>
     <link rel="icon" href="img/favicon (4).ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    
     <style>
-        /* サイト共通のカラー設定 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
             --accent-color: #fb923c;
             --brown-color: #78350f;
         }
-
         body {
             background-color: #fff2e5;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            /* ログインカードを画面の上下左右中央に配置する設定 */
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 0;
         }
-
-        /* ログインボックス（白いカード部分） */
-        .login-card {
+        .signup-card {
             background: white;
             border-radius: 30px;
             width: 100%;
-            max-width: 420px; /* カードの最大幅を制限 */
+            max-width: 420px;
             padding: 40px;
             box-shadow: 0 15px 35px rgba(67, 40, 24, 0.15);
             position: relative;
-            overflow: hidden;
         }
-
-        /* カード内の上部ナビ（ホームへ戻るリンク） */
         .card-top-nav {
             display: flex;
             justify-content: flex-start;
             margin-bottom: 20px;
         }
-
         .btn-back-link {
             color: var(--secondary-color);
             text-decoration: none;
             font-size: 0.9rem;
             font-weight: 600;
-            transition: 0.3s;
             display: flex;
             align-items: center;
             gap: 5px;
         }
-
         .btn-back-link:hover {
             color: var(--primary-color);
-            transform: translateX(-3px); /* ホバー時に少し左に動かす */
+            transform: translateX(-3px);
         }
-
-        /* ロゴとタイトルのデザイン */
         .brand-logo {
             font-size: 1.8rem;
             font-weight: bold;
@@ -72,36 +58,28 @@
             text-align: center;
             margin-bottom: 5px;
         }
-
-        .login-title {
+        .signup-title {
             text-align: center;
             color: var(--brown-color);
             font-size: 1rem;
             margin-bottom: 30px;
             opacity: 0.8;
         }
-
-        /* フォームラベルと入力欄のスタイル */
         .form-label {
             color: var(--brown-color);
             font-weight: 600;
         }
-
         .form-control {
             border-radius: 12px;
             padding: 12px;
             border: 2px solid #f3f3f3;
         }
-
-        /* 入力フォーカス時の装飾 */
         .form-control:focus {
             border-color: var(--secondary-color);
             box-shadow: none;
             background-color: #fffcf9;
         }
-
-        /* グラデーション背景のログインボタン */
-        .btn-login {
+        .btn-signup {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
             border-radius: 12px;
@@ -111,61 +89,12 @@
             width: 100%;
             margin-top: 15px;
         }
-
-        /* 「または〜」の区切り線（Flexboxで線を左右に広げる） */
-        .divider {
-            display: flex;
-            align-items: center;
+        .signin-link {
             text-align: center;
-            margin: 25px 0;
-            color: #ccc;
-            font-size: 0.8rem;
-        }
-
-        .divider::before,
-        .divider::after {
-            content: '';
-            flex: 1;
-            border-bottom: 1px solid #eee;
-        }
-
-        .divider span {
-            padding: 0 10px;
-        }
-
-        /* SNSログインボタンの並び（横並び） */
-        .social-login {
-            display: flex;
-            gap: 12px;
-            justify-content: center;
-        }
-
-        /* 丸みのある四角いSNSアイコンボタン */
-        .btn-social {
-            width: 45px;
-            height: 45px;
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 1px solid #eee;
-            color: var(--brown-color);
-            transition: 0.3s;
-        }
-
-        .btn-social:hover {
-            background-color: #fdfdfd;
-            border-color: var(--secondary-color);
-        }
-
-        /* 新規登録へのリンクエリア */
-        .signup-link {
-            text-align: center;
-            margin-top: 30px;
+            margin-top: 25px;
             font-size: 0.85rem;
         }
-
-        .signup-link a {
+        .signin-link a {
             color: var(--primary-color);
             font-weight: bold;
             text-decoration: none;
@@ -175,7 +104,7 @@
 
 <body>
 
-    <div class="login-card">
+    <div class="signup-card">
         <div class="card-top-nav">
             <a href="index.html" class="btn-back-link">
                 <i class="bi bi-chevron-left"></i> ホームへ戻る
@@ -185,49 +114,49 @@
         <div class="brand-logo">
             <i class="bi bi-layers-half"></i> ハンガーtimes
         </div>
-        <p class="login-title">管理アカウントにログイン</p>
+        <p class="signup-title">新規アカウントを作成</p>
 
-        <form id="loginForm">
+        <form id="signupForm">
+            <div class="mb-3">
+                <label class="form-label">ユーザー名</label>
+                <input type="text" class="form-control" placeholder="例：taro123" required>
+            </div>
+
             <div class="mb-3">
                 <label class="form-label">メールアドレス</label>
                 <input type="email" class="form-control" placeholder="mail@example.com" required>
             </div>
-            <div class="mb-4">
+
+            <div class="mb-3">
                 <label class="form-label">パスワード</label>
                 <input type="password" class="form-control" placeholder="••••••••" required>
             </div>
 
-            <button type="submit" class="btn btn-login">ログイン</button>
+            <div class="mb-4">
+                <label class="form-label">パスワード（確認）</label>
+                <input type="password" class="form-control" placeholder="••••••••" required>
+            </div>
+
+            <button type="submit" class="btn btn-signup">登録する</button>
         </form>
 
-        <div class="divider">
-            <span>または他アカウントでログイン</span>
-        </div>
-
-        <div class="social-login">
-            <a href="#" class="btn-social"><i class="bi bi-google"></i></a>
-            <a href="#" class="btn-social"><i class="bi bi-apple"></i></a>
-            <a href="#" class="btn-social"><i class="bi bi-line"></i></a>
-        </div>
-
-        <div class="signup-link">
-            <span class="text-muted">まだ登録がお済みでないですか？</span><br>
-            <a href="newlogin.html">新規会員登録はこちら</a>
+        <div class="signin-link">
+            <span class="text-muted">すでにアカウントをお持ちですか？</span><br>
+            <a href="login.html">ログインはこちら</a>
         </div>
     </div>
 
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function (e) {
-            e.preventDefault(); // 実際のフォーム送信を防ぐ
-            const btn = this.querySelector('.btn-login');
-            
-            // ボタンを「認証中」の状態に書き換える演出
-            btn.innerHTML = '認証中...';
+        document.getElementById('signupForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const btn = this.querySelector('.btn-signup');
+            btn.innerHTML = '処理中…';
             btn.style.opacity = '0.7';
 
-            // 1秒後にホーム画面へ遷移させる
+            // 1秒後にログインページへ遷移（仮）
             setTimeout(() => {
-                window.location.href = 'index.html';
+                window.location.href = 'login.html';
             }, 1000);
         });
     </script>
@@ -235,4 +164,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
