--- a/metalhanger.html
+++ b/metalhanger.html
@@ -22,6 +22,7 @@
         }
 
         /* ===== ナビゲーションバー ===== */
+        /* ナビゲーション */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -31,6 +32,16 @@
             font-weight: bold;
             color: var(--primary-color) !important;
             font-size: 1.5rem;
+        }
+
+        .nav-link {
+            color: var(--brown-color) !important;
+            font-weight: 500;
+            margin: 0 10px;
+        }
+
+        .nav-link:hover {
+            color: var(--primary-color) !important;
         }
 
         /* ===== ヒーローセクション（背景画像付き見出し） ===== */
@@ -156,7 +167,7 @@
             <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
                 <i class="bi bi-arrow-left-circle"></i> 関連ハンガー
             </h5>
-            <a href="pet-guide-detailハンガー種類.html" class="btn btn-outline-success btn-lg rounded-pill px-5">
+            <a href="#" class="btn btn-outline-success btn-lg rounded-pill px-5">
                 <i class="bi bi-hanger"></i> 他のハンガー種類を見る
             </a>
         </div>
